log
Thu, May  1, 2025  4:17:15 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025  1:08:51 AM: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
8fabe4f
Fri, May  2, 2025  1:23:31 AM: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
f8eaa76
Fri, May  2, 2025  1:23:50 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
4b4e5ff
Fri, May  2, 2025  1:23:57 AM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:63:16: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode * parent = NULL;
                ^~~~~~
cc1.exe: all warnings being treated as errors
1a7ff4a
Fri, May  2, 2025  1:26:32 AM: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|7
total_score: 5/70
de1c739
Fri, May  2, 2025  1:28:04 AM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 15/70
9388737
Fri, May  2, 2025  1:28:50 AM: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|7
total_score: 5/70
42d708d
Fri, May  2, 2025  1:29:06 AM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|6
total_score: 15/70
9c8b95f
Fri, May  2, 2025  1:35:13 AM: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
f483172
Fri, May  2, 2025  1:35:31 AM: 
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:126:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
d187cb4
Fri, May  2, 2025  1:36:06 AM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:130:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
78fb29c
Fri, May  2, 2025  1:36:54 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
0669d75
Fri, May  2, 2025  1:40:45 AM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
a46cf89
Sat, May  3, 2025 12:02:12 AM: 
 treemap.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 56 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 40/70
60ea392
Sat, May  3, 2025 12:04:17 AM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
6ca2663
